# smart_data

./: .gitignore  BanMoTaDuAn.md  colab_fall_detection_gpu.ipynb  colab_train_fall_yolo.ipynb  package-lock.json  package.json  tailwind.config.ts
.next/dev/types/: validator.ts
app/: layout.tsx  page.tsx
app/detection/: page.tsx
app/settings/: page.tsx
backend/: .env.example  .gitignore  README.md  dump_db.py  fall_mediapipe.py  main.py  pyproject.toml  requirements-mediapipe.txt  requirements.txt  test_api.py  verify_api_fall.py
backend/model_v8/: README.md  best_model.keras  best_model.tflite
components/analytics/: heatmap-chart.tsx  line-chart.tsx  model-metrics.tsx
components/dashboard/: alert-history.tsx  snapshot-gallery.tsx  stats-header.tsx  video-stream-new.tsx  video-stream.tsx
components/layout/: sidebar.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  slider.tsx  switch.tsx  tabs.tsx  toast.tsx
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/copilot/: page.tsx
frontend/app/detection/: page.tsx
frontend/app/events/: page.tsx
frontend/app/live/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/charts/: charts.tsx
frontend/components/common/: animated-number.tsx  badges.tsx  live-dot.tsx  page-header.tsx
frontend/components/copilot/: agent-chart.tsx  copilot-chat.tsx  insight-cards.tsx  markdown.tsx
frontend/components/dashboard/: alert-history.tsx  (+6 more)
frontend/lib/: api.ts  motion.ts  types.ts  utils.ts
(+30 files in other folders)
