[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "huggingface-hub>=1.3.3",
    "pillow>=12.1.0",
    "python-multipart>=0.0.21",
    "ultralytics>=8.4.7",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
